@@ -1,5 +1,6 @@
 package org.seasar.doma.boot.autoconfigure;
 
+import static org.hamcrest.CoreMatchers.containsString;
 import static org.hamcrest.CoreMatchers.instanceOf;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.CoreMatchers.notNullValue;
@@ -7,6 +8,7 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.mock;
@@ -49,7 +51,6 @@ import org.seasar.doma.jdbc.criteria.Entityql;
 import org.seasar.doma.jdbc.criteria.NativeSql;
 import org.seasar.doma.jdbc.criteria.QueryDsl;
 import org.seasar.doma.jdbc.dialect.Dialect;
-import org.seasar.doma.jdbc.dialect.H2Dialect;
 import org.seasar.doma.jdbc.dialect.MysqlDialect;
 import org.seasar.doma.jdbc.dialect.PostgresDialect;
 import org.seasar.doma.jdbc.dialect.StandardDialect;
@@ -57,8 +58,10 @@ import org.seasar.doma.jdbc.statistic.DefaultStatisticManager;
 import org.seasar.doma.jdbc.statistic.StatisticManager;
 import org.seasar.doma.message.Message;
 import org.seasar.doma.slf4j.Slf4jJdbcLogger;
+import org.springframework.beans.factory.BeanCreationException;
 import org.springframework.beans.factory.NoSuchBeanDefinitionException;
 import org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration;
+import org.springframework.boot.autoconfigure.jdbc.JdbcConnectionDetails;
 import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.context.annotation.AnnotationConfigApplicationContext;
 import org.springframework.context.annotation.Bean;
@@ -70,6 +73,7 @@ import org.springframework.dao.DataAccessException;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.dao.QueryTimeoutException;
 import org.springframework.dao.support.PersistenceExceptionTranslator;
+import org.springframework.jdbc.datasource.SimpleDriverDataSource;
 import org.springframework.jdbc.datasource.TransactionAwareDataSourceProxy;
 
 public class DomaAutoConfigurationTest {
@@ -264,11 +268,71 @@ public class DomaAutoConfigurationTest {
 		MutablePropertySources sources = context.getEnvironment()
 				.getPropertySources();
 		sources.addFirst(new MapPropertySource("test",
-				Collections.singletonMap("spring.datasource.url", "jdbc:h2:mem:example")));
+				Map.of("spring.datasource.url", "jdbc:postgresql://localhost:1234/example",
+						"doma.exception-translation-enabled",
+						"false" /* prevent database connections */)));
 		this.context.register(DomaAutoConfiguration.class, DataSourceAutoConfiguration.class);
 		this.context.refresh();
 		Dialect dialect = this.context.getBean(Dialect.class);
-		assertThat(dialect, is(instanceOf(H2Dialect.class)));
+		assertThat(dialect, is(instanceOf(PostgresDialect.class)));
+	}
+
+	@Test
+	public void testDialectByJdbConnectionDetails() {
+		MutablePropertySources sources = context.getEnvironment()
+				.getPropertySources();
+		sources.addFirst(new MapPropertySource("test",
+				Map.of("doma.exception-translation-enabled",
+						"false"/* prevent database connections */)));
+		this.context.register(DomaAutoConfiguration.class, DataSourceAutoConfiguration.class);
+		this.context.registerBean(JdbcConnectionDetails.class, () -> new JdbcConnectionDetails() {
+			@Override
+			public String getUsername() {
+				return "dummy";
+			}
+
+			@Override
+			public String getPassword() {
+				return "dummy";
+			}
+
+			@Override
+			public String getJdbcUrl() {
+				return "jdbc:postgresql://localhost:1234/example";
+			}
+		});
+		this.context.refresh();
+		Dialect dialect = this.context.getBean(Dialect.class);
+		assertThat(dialect, is(instanceOf(PostgresDialect.class)));
+	}
+
+	@Test
+	public void testDialectMissingJdbConnectionDetails() {
+		MutablePropertySources sources = context.getEnvironment()
+				.getPropertySources();
+		sources.addFirst(new MapPropertySource("test",
+				Map.of("doma.exception-translation-enabled",
+						"false"/* prevent database connections */)));
+		this.context.register(DomaAutoConfiguration.class, DataSourceAutoConfiguration.class);
+		this.context.registerBean(DataSource.class, SimpleDriverDataSource::new);
+		BeanCreationException exception = assertThrows(BeanCreationException.class,
+				() -> this.context.refresh());
+		assertThat(exception.getMessage(), containsString(
+				"No connection details available. You will probably have to set 'doma.dialect' explicitly."));
+	}
+
+	@Test
+	public void testDialectMissingJdbConnectionDetailsExplicitDialect() {
+		MutablePropertySources sources = context.getEnvironment()
+				.getPropertySources();
+		sources.addFirst(new MapPropertySource("test",
+				Map.of("doma.dialect", "POSTGRES", "doma.exception-translation-enabled",
+						"false"/* prevent database connections */)));
+		this.context.register(DomaAutoConfiguration.class, DataSourceAutoConfiguration.class);
+		this.context.registerBean(DataSource.class, SimpleDriverDataSource::new);
+		this.context.refresh();
+		Dialect dialect = this.context.getBean(Dialect.class);
+		assertThat(dialect, is(instanceOf(PostgresDialect.class)));
 	}
 
 	@Test
